<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/kotlin_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kotlin" />

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/kotlin_img"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yyyy_mm_dd"
            android:inputType="date"
            android:minHeight="48dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/female">
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
        </RadioGroup>
    </LinearLayout>
<Button
    android:id="@+id/button_registration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/fields"
    app:layout_constraintStart_toStartOf="@id/fields"
    app:layout_constraintEnd_toEndOf="@id/fields"
    tools:ignore="MissingConstraints"
    android:text="@string/register"
    android:textSize="18sp"/>


    <TextView
        android:id="@+id/welcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/button_registration"
        app:layout_constraintStart_toStartOf="@id/button_registration"
        app:layout_constraintTop_toBottomOf="@id/button_registration"
        android:layout_marginTop="15dp"
        tools:text="welcome"
        android:textSize="25dp"
        android:textColor="#530a6e"/>

    <TextView
        android:id="@+id/show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/welcom"
        app:layout_constraintStart_toStartOf="@id/welcom"
        app:layout_constraintTop_toBottomOf="@id/welcom"
        android:layout_marginTop="10dp"
        tools:text="name"
        android:textSize="15dp"
        android:textColor="#530a6e"/>

</androidx.constraintlayout.widget.ConstraintLayout>